samples/_failures_safe/1761367359_2daf1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98ae113b.c: In function ‘main’:
./samples/SAFE/__tmp_98ae113b.c:138:9: error: expected declaration or statement at end of input
  138 |         printf("No input data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_98ae113b.c:138:9: error: expected declaration or statement at end of input
